commented all my code

--- a/Code/src/web/views/about-fiu.jade
+++ b/Code/src/web/views/about-fiu.jade
@@ -1,18 +1,25 @@
 extends ./layout.jade
 include ./includes/mixins.jade
 
-//    This is the format laid out for you do not change it!
-//    Alphabetical by last name for each semester and for each STUDENT there
+// @Author John Burke 
+
+//    READ ME:
+//    This is the format laid out for you DO NOT CHANGE IT OR DEVIATE FROM IT!
+//    Alphabetical order by last name for each STUDENT and there are
 //    four places that have to be updated according to the screen size to make
-//    this mobile responsive.
+//    this fully mobile responsive for all five screen sizes. If there are four
+//    students in you group then copy and paste from the last semester and keep
+//    everyone in alphabetical order. If there are two students in your group
+//    then copy the first semester. this will provide an appropriate template
+//    for you to use.
 //
 //  Sample:
 //    div.hidden-xl.hidden-lg.hidden-md.hidden-sm.col-xs-12
-//        a(href='#' target='_blank')   ==> like to linked in page or an about you page only.
+//        a(href='#' target='_blank')   ==> a like to your linked in page only.
 //            | #[img( src="/img/burke.jpg" alt="", width=200)]  ==> photo
 //        h4.strong Burke, John         ==> Your name
 //        p egonz077@fiu.edu            ==> Your email
-//        p Front end development       ==> one feature you worked on (your milestone)
+//        p Front end development       ==> ONE Milestone feature you worked only
 //        p Graduation 5 Aug. 2016      ==> Graduation Data
 //        br
 //        br
@@ -715,7 +722,7 @@ block content
                 br
                 br
             div.col-xl-3.hidden-lg.hidden-md.hidden-sm.hidden-xs
-                a(href='#' target='_blank')
+                a(href='www.linkedin.com/in/emmgonz' target='_blank')
                     | #[img( src="/img/gonzalez_e.jpg" alt="", width=300)]
                 h4.strong Gonzalez, Emmanuel
                 p egonz077@fiu.edu
@@ -751,7 +758,7 @@ block content
                 br
                 br
             div.hidden-xl.col-lg-4.hidden-md.hidden-sm.hidden-xs
-                a(href='#' target='_blank')
+                a(href='www.linkedin.com/in/emmgonz' target='_blank')
                     | #[img( src="/img/gonzalez_e.jpg" alt="", width=300)]
                 h4.strong Gonzalez, Emmanuel
                 p egonz077@fiu.edu
@@ -788,7 +795,7 @@ block content
                 br
                 br
             div.hidden-xl.hidden-lg.col-md-4.col-sm-4.hidden-xs
-                a(href='#' target='_blank')
+                a(href='www.linkedin.com/in/emmgonz' target='_blank')
                     | #[img( src="/img/gonzalez_e.jpg" alt="", width=200)]
                 h4.strong Gonzalez, Emmanuel
                 p egonz077@fiu.edu
@@ -827,7 +834,7 @@ block content
                 br
         div.row
             div.hidden-xl.hidden-lg.hidden-md.hidden-sm.col-xs-12
-                a(href='#' target='_blank')
+                a(href='www.linkedin.com/in/emmgonz' target='_blank')
                     | #[img( src="/img/gonzalez_e.jpg" alt="", width=200)]
                 h4.strong Gonzalez, Emmanuel
                 p egonz077@fiu.edu
