Changed status from home to show staatus.  Created a button to keep data fields contents after validation in create user. Created a button to keep data fields contents in create agency

--- a/Code/src/web/views/partials/bolo-thumbnail.jade
+++ b/Code/src/web/views/partials/bolo-thumbnail.jade
@@ -8,13 +8,14 @@ div.col-xs-12.col-sm-6.col-md-3
             form( action="/bolo/update/" + bolo.id method="post" ).form-group
                 input( type="hidden" name="id" value=bolo.id )
                 label.control-label( for=bolo.id )
-                select.form-control(id=bolo.id name="status" onchange="this.form.submit()")
+                //div.text-uppercase.text-center.text-danger.strong.h4 #{bolo.status}
+                select.form-control(id=bolo.id name="status")
                     option( value=bolo.status, selected disabled ) #{bolo.status}
-                    each val in bolo_status
-                        if bolo.status !== val && val !== ''
-                            +option( val,false )
+                    //each val in bolo_status
+                        //if bolo.status !== val && val !== ''
+                            //+option( val,false )
         div.boloImageContainer
-        
+
             div.boloImageCenterer
                 if bolo.images.featured
                     img( src="/bolo/asset/" + bolo.id + "/featured" alt=bolo.images.featured  )
