--- a/Code/src/web/views/agency-create-form.jade
+++ b/Code/src/web/views/agency-create-form.jade
@@ -20,6 +20,7 @@ block admin-content
     - var route = '/admin/agency';
     - var form_action = '/create';
 
+    button.btn.btn-primary(onclick='history.go(-1);') Go back 
     p  Fill out the form and submit to create a new agency.
 
     form( action=( route + form_action ) enctype="multipart/form-data" method="post" )
