deleted links in about us pages added to the user's guide

--- a/Code/src/web/views/about-ibm.jade
+++ b/Code/src/web/views/about-ibm.jade
@@ -6,8 +6,7 @@ include ./includes/mixins.jade
 block jumbo
     .jumbotron
         .container
-            a(href='http://www.ibm.com/us-en/' target='_blank')
-                | #[img#featured.img.center-block( src="/img/ibm.jpg" alt="" )]
+            img#featured.img.center-block( src="/img/ibm.jpg" alt="" )
 
 block content
     div.container
@@ -50,7 +49,7 @@ block content
                 br
                 br
         div.row
-            div.hidden-xl.hidden-lg.col-md-offset-1.col-md-4.col-sm-offset-1.col-sm-4.col-xs-12
+            div.hidden-xl.hidden-lg.col-md-offset-1.col-md-4.col-sm-offset-1.col-sm-4.hidden-xs
                 img#featured.img-fluid( src="/img/caraballo.jpg" alt="", width=200 )
                 h3.strong Juan Caraballo
                 p IBM Software Engineer
@@ -59,11 +58,30 @@ block content
                 br
                 br
                 br
-            div.hidden-xl.hidden-lg.col-md-offset-2.col-md-4.col-sm-offset-2.col-sm-4.col-xs-12
+            div.hidden-xl.hidden-lg.col-md-offset-2.col-md-4.col-sm-offset-2.col-sm-4.hidden-xs
                 img#featured.img-fluid( src="/img/robert_loredo.png" alt="", width=200 )
                 h3.strong Robert Loredo
                 p IBM Software Engineer
                 p Student mentor
+                br
+                br
+                br
+                br
+        div.row
+            div.hidden-xl.hidden-lg.hidden-md.hidden-sm.col-xs-12
+                img#featured.img.center-block( src="/img/caraballo.jpg" alt="", width=200 )
+                h3.strong(align='center') Juan Caraballo
+                p(align='center') IBM Software Engineer
+                p(align='center') Student mentor
+                br
+                br
+                br
+                br
+            div.hidden-xl.hidden-lg.hidden-md.hidden-sm.col-xs-12
+                img#featured.img.center-block( src="/img/robert_loredo.png" alt="", width=200 )
+                h3.strong(align='center') Robert Loredo
+                p(align='center') IBM Software Engineer
+                p(align='center') Student mentor
                 br
                 br
                 br
