--- a/Code/src/web/views/about-MDCACP.jade
+++ b/Code/src/web/views/about-MDCACP.jade
@@ -6,8 +6,7 @@ include ./includes/mixins.jade
 block jumbo
     .jumbotron
         .container
-            a(href='http://www.mdcacp.org/index.html' target='_blank')
-                | #[img#featured.img.center-block(src="/img/chiefsofpolice.png" alt="", style="height:200px;")]
+            img#featured.img.center-block(src="/img/chiefsofpolice.png" alt="", style="height:200px;")
 
 block content
     br
