Created the ability to delete users for Administrators.  Created the functionality to hide buttons edit and archive for users who are not root or administrators for bolo list and bolo list agency.  Changed the colors for details to blue and edit to light blue.  Added a go back button in general bolo details, theft auto details and theft boat details.

--- a/Code/src/web/views/bolo-details-auto.jade
+++ b/Code/src/web/views/bolo-details-auto.jade
@@ -12,6 +12,7 @@ block jumbo
         .col-xs-14.col-md-6
           .pull-left
             a.btn.btn-default.pull-right( href="/bolo/details/pdf/" + bolo.id + '.pdf',target="_blank" ) Generate PDF
+            button.btn.btn-primary(onclick='history.go(-1);') Go Back
         .col-xs-14.col-md-6
           .pull-right
             if((bolo.record)&&(tier > 2))
