--- a/Code/src/web/views/bolo-list.jade
+++ b/Code/src/web/views/bolo-list.jade
@@ -12,8 +12,8 @@ block jumbo
                   select.selectpicker(id="parent-menu" title="Filter By" mobile = "true" onchange="location = this.value" data-width="fit")
                         option(value="/bolo/mybolos" ) My Bolos
                         option(value="/bolo/agency/" + userAgency.id name="agencyID" ) My Agency
-                        option(value="/bolo/" ) All Bolos     
-                  
+                        option(value="/bolo/" ) All Bolos
+
                     form-inline(role="form" action="/admin/users/create" enctype="multipart/form-data" method="post" )
                         div.input-group
                             span.input-group-btn
@@ -25,17 +25,17 @@ block jumbo
                                         script.
                                               $('#submit-select').hide();
                                               $(window).load(function(e){
-                                                
+
                                               if($('#agency-select').is(":visible")){
                                                 $('#submit-select').show();
                                               }
-                                              
-                                              
+
+
                                               $('#submit-select').click(function(e){
                                                 var agencies = [];
                                                   agencies = $('#agency-select').val();
-          
-                                                  
+
+
                                                   if(agencies.length > 0){
                                                       $.ajax({
                                                         url: '/bolo/agencies',
@@ -46,11 +46,11 @@ block jumbo
                                                         }
                                                       })
                                                     }
-                                                    
+
                                                   })
                                                 })
-                                          
-                                            
+
+
 
 block content
     include ./partials/global-alerts.jade
@@ -62,13 +62,15 @@ block content
         for bolo in bolos
             if bolo && bolo.confirmed === true
                 include ./partials/bolo-thumbnail.jade
-                    .actions
-                        a.btn.btn-default( href="/bolo/edit/" + bolo.id, role="button" ) Edit
-                        a.btn.btn-default( href="/bolo/details/" + bolo.id role="button" ) Details
-                        a.btn.btn-warning( href="/bolo/archive/" + bolo.id role="button" onclick="return confirm('Are you sure you want to archive this bolo?')"
-                        ) Archive
-
-
+                    if (tier === 'ROOT' || tier === 'ADMINISTRATOR')
+                        .actions
+                            a.btn.btn-info( href="/bolo/edit/" + bolo.id, role="button" ) Edit
+                            a.btn.btn-primary( href="/bolo/details/" + bolo.id role="button" ) Details
+                            a.btn.btn-warning( href="/bolo/archive/" + bolo.id role="button" onclick="return confirm('Are you sure you want to archive this bolo?')"
+                            ) Archive
+                    else
+                        .actions
+                            a.btn.btn-primary( href="/bolo/details/" + bolo.id role="button" ) Details
     .row.text-center
         - var route = pageRoute;
         include ./partials/paging.jade
