added a view button to archive and show buttons restore and archive only for root and administrators

--- a/Code/src/web/views/bolo-archive.jade
+++ b/Code/src/web/views/bolo-archive.jade
@@ -33,9 +33,15 @@ block content
         .row
             for bolo in bolos
                     include ./partials/bolo-thumbnail.jade
-                        .action
-                            a.btn.btn-default( href="/bolo/restore/" + bolo.id role="button" type="submit" ) Restore
-                            a.btn.btn-danger( href="/bolo/delete/" + bolo.id role="button" type="submit" ) Delete
+                        if (tier === 'ROOT' || tier === 'ADMINISTRATOR')
+                            .actions
+                                a.btn.btn-primary( href="/bolo/details/" + bolo.id role="button" ) View
+                                a.btn.btn-success( href="/bolo/restore/" + bolo.id role="button" type="submit" ) Restore
+                                a.btn.btn-danger( href="/bolo/delete/" + bolo.id role="button" type="submit" ) Delete
+                        else
+                            .actions
+                                a.btn.btn-primary( href="/bolo/details/" + bolo.id role="button" ) View
+
 
         .row.text-center
             - var route = '/bolo/archive'
