Empty fields no shown on detaiand preview view

--- a/Code/src/web/views/bolo-details-auto.jade
+++ b/Code/src/web/views/bolo-details-auto.jade
@@ -60,70 +60,40 @@ block content
 
                 if bolo.data.dateReported.length
                   +form_labels_row("Date Reported", bolo.data.dateReported, bolo.data.dateReported?"":"hidden")
-                else
-                  +form_labels_row("Date Reported", "N/A" )
                 if bolo.data.timeReported.length
                   +form_labels_row("Time Reported", bolo.data.timeReported, bolo.data.timeReported?"":"hidden")
-                else
-                  +form_labels_row("Time Reported", "N/A" )
 
 
                 if bolo.data.authorFName != null || bolo.data.authorLName != null
                   +form_labels_row("Author", bolo.data.authorFName + " " +  bolo.data.authorLName )
-                else
-                  +form_labels_row("Author", "N/A")
                 if bolo.data.vehicleYear.length
                   +form_labels_row("Year", bolo.data.vehicleYear, bolo.data.vehicleYear?"":"hidden")
-                else
-                  +form_labels_row("Year", "N/A" )
                 if bolo.data.vehicleMake.length
                   +form_labels_row("Make", bolo.data.vehicleMake, bolo.data.vehicleMake?"":"hidden")
-                else
-                  +form_labels_row("Make", "N/A" )
                 if bolo.data.vehicleModel.length
                   +form_labels_row("Model", bolo.data.vehicleModel, bolo.data.vehicleModel?"":"hidden")
-                else
-                  +form_labels_row("Model", "N/A" )
                 if bolo.data.vehicleStyle.length
                   +form_labels_row("Style", bolo.data.vehicleStyle, bolo.data.vehicleStyle?"":"hidden")
-                else
-                  +form_labels_row("Style", "N/A" )
                 if bolo.data.vehicleColor.length
                    +form_labels_row("Color", bolo.data.vehicleColor, bolo.data.vehicleColor?"":"hidden")
-                else
-                   +form_labels_row("Color", "N/A" )
                 if bolo.data.vehicleIdNumber.length
                    +form_labels_row("Vehicle Identification Number", bolo.data.vehicleIdNumber, bolo.data.vehicleIdNumber?"":"hidden")
-                else
-                   +form_labels_row("Vehicle Identification Number", "N/A" )
                 | &nbsp;
                 div.row
                    div.col-xs-12
-                      if bolo.data.vehicleLicenseState != 'null' || bolo.data.vehicleLicensePlate != null
+                      if bolo.data.vehicleLicenseState != '' || bolo.data.vehicleLicensePlate != ''
                          +form_labels_row("Tag License Plate", bolo.data.vehicleLicenseState + " " +  bolo.data.vehicleLicensePlate )
-                      else
-                         +form_labels_row("Tag License Plate", "N/A")
 
                 if bolo.data.dateRecovered.length
                   +form_labels_row("Date Recovered", bolo.data.dateRecovered, bolo.data.dateRecovered?"":"hidden")
-                else
-                  +form_labels_row("Date Recovered", "N/A" )
                 if bolo.data.timeRecovered.length
                   +form_labels_row("Time Recovered", bolo.data.timeRecovered, bolo.data.timeRecovered?"":"hidden")
-                else
-                  +form_labels_row("Time Recovered", "N/A" )
                 if bolo.data.addressRecovered.length
                   +form_labels_row("Address Recovered", bolo.data.addressRecovered, bolo.data.addressRecovered?"":"hidden")
-                else
-                  +form_labels_row("Address Recovered", "N/A" )
                 if bolo.data.zipCodeRecovered.length
                   +form_labels_row("Zip Code Recovered", bolo.data.zipCodeRecovered, bolo.data.zipCodeRecovered?"":"hidden")
-                else
-                  +form_labels_row("Zip Code Recovered", "N/A" )
                 if bolo.data.agencyRecovered.length
                   +form_labels_row("Agency Recovered", bolo.data.agencyRecovered, bolo.data.agencyRecovered?"":"hidden")
-                else
-                  +form_labels_row("Agency Recovered", "N/A" )
 
 
         div.row
