--- a/Code/src/web/views/bolo-details-boat.jade
+++ b/Code/src/web/views/bolo-details-boat.jade
@@ -60,115 +60,69 @@ block content
 
                 if bolo.data.dateReported.length
                   +form_labels_row("Date Reported", bolo.data.dateReported, bolo.data.dateReported?"":"hidden")
-                else
-                  +form_labels_row("Date Reported", "N/A" )
                 if bolo.data.timeReported.length
                   +form_labels_row("Time Reported", bolo.data.timeReported, bolo.data.timeReported?"":"hidden")
-                else
-                  +form_labels_row("Time Reported", "N/A" )
 
 
                 if bolo.data.authorFName != null || bolo.data.authorLName != null
                   +form_labels_row("Author", bolo.data.authorFName + " " +  bolo.data.authorLName )
-                else
-                  +form_labels_row("Author", "N/A")
 
 
                 div.col-xs-12.h5.text-danger.strong VESSEL
 
                 if bolo.data.boatYear.length
                    +form_labels_row("Year", bolo.data.boatYear, bolo.data.boatYear?"":"hidden")
-                else
-                   +form_labels_row("Year", "N/A" )
                 if bolo.data.boatManufacturer.length
                    +form_labels_row("Manufacturer", bolo.data.boatManufacturer, bolo.data.boatManufacturer?"":"hidden")
-                else
-                   +form_labels_row("Manufacturer", "N/A" )
                 if bolo.data.boatModel.length
                    +form_labels_row("Model", bolo.data.boatModel, bolo.data.boatModel?"":"hidden")
-                else
-                   +form_labels_row("Model", "N/A" )
                 if bolo.data.boatType.length
                    +form_labels_row("Type", bolo.data.boatType, bolo.data.boatType?"":"hidden")
-                else
-                   +form_labels_row("Type", "N/A" )
                 if bolo.data.boatLenght != "Select an option..."
                    +form_labels_row("Length", bolo.data.boatLength, bolo.data.boatLength?"":"hidden")
-                else
-                   +form_labels_row("Length", "N/A" )
                 if bolo.data.boatColor.length
                    +form_labels_row("Color", bolo.data.boatColor, bolo.data.boatColor?"":"hidden")
-                else
-                   +form_labels_row("Color", "N/A" )
                 if bolo.data.boatHullIdNumber.length
                    +form_labels_row("Hull Id Number", bolo.data.boatHullIdNumber, bolo.data.boatHullIdNumber?"":"hidden")
-                else
-                   +form_labels_row("Hull Id Number", "N/A" )
 
                 div.row
                    div.col-xs-12
-                      if bolo.data.boatRegistrationNumberSt != 'null' || bolo.data.boatRegistrationNumberNu != null
+                      if bolo.data.boatRegistrationNumberSt != '' || bolo.data.boatRegistrationNumberNu != ''
                          +form_labels_row("Registration Number", bolo.data.boatRegistrationNumberSt + " " +  bolo.data.boatRegistrationNumberNu )
-                      else
-                         +form_labels_row("Registration Number", "N/A")
 
                 div.col-xs-12.h5.text-danger.strong PROPULSION
 
-                if bolo.data.propulsion != "Select an option..."
+                if bolo.data.propulsion != "N/A"
                    +form_labels_row("Propulsion", bolo.data.propulsion, bolo.data.propulsion?"":"hidden")
-                else
-                   +form_labels_row("Propulsion", "N/A" )
                 if bolo.data.propulsionType != "Select an option..."
                    +form_labels_row("Type", bolo.data.propulsionType, bolo.data.propulsionType?"":"hidden")
-                else
-                   +form_labels_row("Type", "N/A" )
                 if bolo.data.propulsionMake != "Select an option..."
                    +form_labels_row("Make", bolo.data.propulsionMake, bolo.data.propulsionMake?"":"hidden")
-                else
-                   +form_labels_row("Make", "N/A" )
 
                 div.col-xs-12.h5.text-danger.strong TRAILER
 
                 if bolo.data.trailer != "Select an option..."
                    +form_labels_row("Trailer", bolo.data.trailer, bolo.data.trailer?"":"hidden")
-                else
-                   +form_labels_row("Trailer", "N/A" )
                 if bolo.data.trailerManufacturer != "Select an option..."
                    +form_labels_row("Manufacturer", bolo.data.trailerManufacturer, bolo.data.trailerManufacturer?"":"hidden")
-                else
-                   +form_labels_row("Manufacturer", "N/A" )
                 if bolo.data.trailerVIN.length
                    +form_labels_row("Vehicle Identification Number", bolo.data.trailerVIN, bolo.data.trailerVIN?"":"hidden")
-                else
-                   +form_labels_row("Vehicle Identification Number", "N/A" )
                 div.row
                    div.col-xs-12
-                      if bolo.data.trailerTagLicenseState != 'null' || bolo.data.trailerTagLicenseNumber != null
+                      if bolo.data.trailerTagLicenseState != '' || bolo.data.trailerTagLicenseNumber != ''
                          +form_labels_row("Tag License Plate", bolo.data.trailerTagLicenseState + " " +  bolo.data.trailerTagLicenseNumber )
-                      else
-                         +form_labels_row("Tag License Plate", "N/A")
 
 
                 if bolo.data.dateRecovered.length
                   +form_labels_row("Date Recovered", bolo.data.dateRecovered, bolo.data.dateRecovered?"":"hidden")
-                else
-                  +form_labels_row("Date Recovered", "N/A" )
                 if bolo.data.timeRecovered.length
                   +form_labels_row("Time Recovered", bolo.data.timeRecovered, bolo.data.timeRecovered?"":"hidden")
-                else
-                  +form_labels_row("Time Recovered", "N/A" )
                 if bolo.data.addressRecovered.length
                   +form_labels_row("Address Recovered", bolo.data.addressRecovered, bolo.data.addressRecovered?"":"hidden")
-                else
-                  +form_labels_row("Address Recovered", "N/A" )
                 if bolo.data.zipCodeRecovered.length
                   +form_labels_row("Zip Code Recovered", bolo.data.zipCodeRecovered, bolo.data.zipCodeRecovered?"":"hidden")
-                else
-                  +form_labels_row("Zip Code Recovered", "N/A" )
                 if bolo.data.agencyRecovered.length
                   +form_labels_row("Agency Recovered", bolo.data.agencyRecovered, bolo.data.agencyRecovered?"":"hidden")
-                else
-                  +form_labels_row("Agency Recovered", "N/A" )
 
 
         div.row
