--- a/Code/src/web/views/bolo-preview-auto-details.jade
+++ b/Code/src/web/views/bolo-preview-auto-details.jade
@@ -48,48 +48,28 @@ block content
 
                 if bolo.data.dateReported.length
                   +form_labels_row("Date Reported", bolo.data.dateReported, bolo.data.dateReported?"":"hidden")
-                else
-                  +form_labels_row("Date Reported", "N/A" )
                 if bolo.data.timeReported.length
                   +form_labels_row("Time Reported", bolo.data.timeReported, bolo.data.timeReported?"":"hidden")
-                else
-                  +form_labels_row("Time Reported", "N/A" )
 
                 if bolo.data.authorFName != null || bolo.data.authorLName != null
                   +form_labels_row("Author", bolo.data.authorFName + " " +  bolo.data.authorLName )
-                else
-                  +form_labels_row("Author", "N/A")
                 if bolo.data.vehicleYear.length
                   +form_labels_row("Year", bolo.data.vehicleYear, bolo.data.vehicleYear?"":"hidden")
-                else
-                  +form_labels_row("Year", "N/A" )
                 if bolo.data.vehicleMake.length
                   +form_labels_row("Make", bolo.data.vehicleMake, bolo.data.vehicleMake?"":"hidden")
-                else
-                  +form_labels_row("Make", "N/A" )
                 if bolo.data.vehicleModel.length
                   +form_labels_row("Model", bolo.data.vehicleModel, bolo.data.vehicleModel?"":"hidden")
-                else
-                  +form_labels_row("Model", "N/A" )
                 if bolo.data.vehicleStyle.length
                   +form_labels_row("Style", bolo.data.vehicleStyle, bolo.data.vehicleStyle?"":"hidden")
-                else
-                  +form_labels_row("Style", "N/A" )
                 if bolo.data.vehicleColor.length
                    +form_labels_row("Color", bolo.data.vehicleColor, bolo.data.vehicleColor?"":"hidden")
-                else
-                   +form_labels_row("Color", "N/A" )
                 if bolo.data.vehicleIdNumber.length
                    +form_labels_row("Vehicle Identification Number", bolo.data.vehicleIdNumber, bolo.data.vehicleIdNumber?"":"hidden")
-                else
-                   +form_labels_row("Vehicle Identification Number", "N/A" )
                 | &nbsp;
                 div.row
                    div.col-xs-12
-                      if bolo.data.vehicleLicenseState != 'null' || bolo.data.vehicleLicensePlate != null
+                      if bolo.data.vehicleLicenseState != '' || bolo.data.vehicleLicensePlate != ''
                          +form_labels_row("Tag License Plate", bolo.data.vehicleLicenseState + " " +  bolo.data.vehicleLicensePlate )
-                      else
-                         +form_labels_row("Tag License Plate", "N/A")
 
             div.row
               div.col-xs-8
