--- a/Code/src/web/views/bolo-search-results.jade
+++ b/Code/src/web/views/bolo-search-results.jade
@@ -19,10 +19,15 @@ block content
     .row
         for bolo in bolos
                 include ./partials/bolo-thumbnail.jade
-                    .actions
-                        a.btn.btn-default( href="/bolo/edit/" + bolo.id, role="button" ) Edit
-                        a.btn.btn-default( href="/bolo/details/" + bolo.id role="button" ) Details
-                        a.btn.btn-warning( href="/bolo/archive/" + bolo.id role="button" ) Archive
+                    if (tier === 'ROOT' || tier === 'ADMINISTRATOR')
+                        .actions
+                            a.btn.btn-info( href="/bolo/edit/" + bolo.id, role="button" ) Edit
+                            a.btn.btn-primary( href="/bolo/details/" + bolo.id role="button" ) Details
+                            a.btn.btn-warning( href="/bolo/archive/" + bolo.id role="button" onclick="return confirm('Are you sure you want to archive this bolo?')"
+                            ) Archive
+                    else
+                        .actions
+                            a.btn.btn-primary( href="/bolo/details/" + bolo.id role="button" ) Details
 
     .row.text-center
         - var route = '/bolo/search/results'
