--- a/Code/src/web/views/account-notifications.jade
+++ b/Code/src/web/views/account-notifications.jade
@@ -34,4 +34,4 @@ block account-content
 
         .form-group
             button.btn.btn-warning( type="submit" value="save" ) Unsubscribe Selected
-            a.pull-right( href=ROUTE + "/subscribe" ) Want to subscribe to other agencies?
+            a.pull-right( href=ROUTE + "/subscribe" ) Subscribe to other Agencies
