--- a/Code/src/web/views/about-MDCACP.jade
+++ b/Code/src/web/views/about-MDCACP.jade
@@ -21,6 +21,15 @@ block content
         | is comprised of more than 250 of the County’s top law enforcement
         | executives and another 300 associate members. The Association
         | was originally organized in 1937 to promote the administration
-        | and professionalism of law enforcement that would enhance public security by providing superior police protection for the residents of Miami-Dade County and its many visitors. ​Today, with the same ultimate goal, its role has expanded to provide better communication, education, and training for the county’s various police agencies. MDCACP facilitates the dissemination of information, provides continuing police training, and promotes a better understanding of the police profession in general. Membership in the Miami Dade County Association Chiefs of Police supports and maintains the highest standards of public safety and police protection for the millions of people who live, work and play in Miami Dade County.
-
+        | and professionalism of law enforcement that would enhance public
+        | security by providing superior police protection for the residents of
+        | Miami-Dade County and its many visitors. ​Today, with the same ultimate
+        | goal, its role has expanded to provide better communication, education,
+        | and training for the county’s various police agencies. MDCACP facilitates
+        | the dissemination of information, provides continuing police training,
+        | and promotes a better understanding of the police profession in general.
+        | Membership in the Miami Dade County Association Chiefs of Police supports
+        | and maintains the highest standards of public safety and police protection
+        | for the millions of people who live, work and play in Miami Dade County.
+        br
         br
