--- a/Code/src/web/views/bolo-search-results.jade
+++ b/Code/src/web/views/bolo-search-results.jade
@@ -19,12 +19,16 @@ block content
     .row
         for bolo in bolos
                 include ./partials/bolo-thumbnail.jade
-                    if (tier === 'ROOT' || tier === 'ADMINISTRATOR')
+                    if (tier === 'ROOT' || tier === 'ADMINISTRATOR' )
                         .actions
                             a.btn.btn-info( href="/bolo/edit/" + bolo.id, role="button" ) Edit
                             a.btn.btn-primary( href="/bolo/details/" + bolo.id role="button" ) Details
                             a.btn.btn-warning( href="/bolo/archive/" + bolo.id role="button" onclick="return confirm('Are you sure you want to archive this bolo?')"
                             ) Archive
+                    else if (username  === bolo.authorUName )
+                        .actions
+                            a.btn.btn-info( href="/bolo/edit/" + bolo.id, role="button" ) Edit
+                            a.btn.btn-primary( href="/bolo/details/" + bolo.id role="button" ) Details
                     else
                         .actions
                             a.btn.btn-primary( href="/bolo/details/" + bolo.id role="button" ) Details
