updated data-analysis page and system settings page

--- a/Code/src/web/views/about-ibm.jade
+++ b/Code/src/web/views/about-ibm.jade
@@ -33,17 +33,20 @@ block content
             div.col-xl-offset-2.col-xl-3.col-lg-offset-2.col-lg-3.hidden-md.hidden-sm.hidden-xs
                 img#featured.img-fluid( src="/img/caraballo.jpg" alt="", width=300 )
                 h3.strong Juan Caraballo
+                p Student Mentor
                 p IBM Software Engineer
-                p Student mentor
                 br
                 br
                 br
                 br
             div.col-xl-offset-2.col-xl-3.col-lg-offset-2.col-lg-3.hidden-md.hidden-sm.hidden-xs
-                img#featured.img-fluid( src="/img/robert_loredo.png" alt="", width=300 )
+                img#featured.img-fluid( src="/img/robert_loredo.jpg" alt="", width=300 )
                 h3.strong Robert Loredo
-                p IBM Software Engineer
-                p Student mentor
+                p Student Mentor
+                p Lead Developer, IBM Support,
+                p Powered by Watson
+                p IBM Master Inventor -
+                p Distinguished Certified IT Specialist
                 br
                 br
                 br
@@ -52,17 +55,20 @@ block content
             div.hidden-xl.hidden-lg.col-md-offset-1.col-md-4.col-sm-offset-1.col-sm-4.hidden-xs
                 img#featured.img-fluid( src="/img/caraballo.jpg" alt="", width=200 )
                 h3.strong Juan Caraballo
+                p Student Mentor
                 p IBM Software Engineer
-                p Student mentor
                 br
                 br
                 br
                 br
             div.hidden-xl.hidden-lg.col-md-offset-2.col-md-4.col-sm-offset-2.col-sm-4.hidden-xs
-                img#featured.img-fluid( src="/img/robert_loredo.png" alt="", width=200 )
+                img#featured.img-fluid( src="/img/robert_loredo.jpg" alt="", width=200 )
                 h3.strong Robert Loredo
-                p IBM Software Engineer
-                p Student mentor
+                p Student Mentor
+                p Lead Developer, IBM Support,
+                p Powered by Watson
+                p IBM Master Inventor -
+                p Distinguished Certified IT Specialist
                 br
                 br
                 br
