--- a/Code/src/web/views/admin-layout.jade
+++ b/Code/src/web/views/admin-layout.jade
@@ -7,7 +7,7 @@ block jumbo
 
   block content
     .row
-        .col-sm-3
+        .col-xl-3.col-lg-3.col-md-3.col-sm-3.col-xs-12
             ul.nav.nav-pills.nav-stacked(role="nav")
                 li(class=( admin_nav === 'admin-index' ? 'active' : '' ))
                     a(href="/admin") Dashboard
@@ -25,6 +25,6 @@ block jumbo
                 li(class=( admin_nav === 'admin-dataAnalysis' ? 'active' : '' ))
                   if(tier === 'ROOT')
                     a(href="/admin/dataAnalysis") Data Analysis
-        .col-sm-9
+        .col-xl-9.col-lg-9.col-md-9.col-sm-9.col-xs-12
             include ./partials/global-alerts.jade
             block admin-content
