--- a/Code/src/web/views/system-setting.jade
+++ b/Code/src/web/views/system-setting.jade
@@ -1,47 +1,27 @@
-extends ./layout.jade
+extends ./admin-layout.jade
 include ./includes/mixins.jade
 
 //Author John Burke
 
-block jumbo
-    .jumbotron
-        .container
-            .row
-              div.col-xs-12
-                 h3 System Settings
+block jumbo-desc
+    p Admin Portal: System Settings
             br
 
-block content
+block admin-content
     if ( tier === 'ROOT' )
-        <br> <br> <br>
-        div.container
-            div.row
-                div.col-xl-offset-4.col-xl-4.col-lg-offset-4.col-lg-4.col-md-offset-3.col-md-6.col-sm-offset-3.col-sm-6.hidden-xs
-                    label Brute Force Login (3 - 10) Attempts&nbsp;&nbsp;
-                    input(type='number', name='brute', min='3', max='10')
-                    <br>
-                    <br>
-            div.row
-                div.col-xl-offset-4.col-xl-4.col-lg-offset-4.col-lg-4.col-md-offset-3.col-md-6.col-sm-offset-3.col-sm-6.hidden-xs
-                    label System Timeout (10 - 240) Minutes&nbsp;&nbsp;
-                    input(type='number', name='minutes', min='10', max='240')
-                    <br>
-                    <br>
-            div.row
-                div.hidden-xl.hidden-lg.hidden-md.hidden-sm.col-xs-offset-2.col-xs-8
-                    label Brute Force Login Attempts&nbsp;&nbsp;
-                    input(type='number', name='brute', min='3', max='10')
-                    <br>
-                    <br>
-            div.row
-                div.hidden-xl.hidden-lg.hidden-md.hidden-sm.col-xs-offset-2.col-xs-8
-                    label System Timeout Minutes&nbsp;&nbsp;&nbsp;
-                    input(type='number', name='minutes', min='10', max='240')
-                    <br>
-                    <br>
-            div.row
-                div.col-xl-offset-4.col-xl-4.col-lg-offset-4.col-lg-4.col-md-offset-3.col-md-6.col-sm-offset-3.col-sm-6.col-xs-offset-2.col-xs-8
-                    input(type='submit', data-inline='true', value='Submit')
+        .col-xl-offset-2.col-xl-6.col-lg-offset-2.col-lg-6.col-md-offset-2.col-md-6
+            p.lead Set the system settings
+            .form-group
+                label Brute Force Login (3 - 10) Attempts&nbsp;&nbsp;
+                input(type='number', name='brute', min='3', max='10')
+            br
+            br
+            .form-group
+                label System Timeout (10 - 240) Minutes&nbsp;&nbsp;
+                input(type='number', name='minutes', min='10', max='240')
+            br
+            br
+            input(type='submit', data-inline='true', value='Submit')
 
     else
         P where did you come from?
