--- a/Code/src/web/views/data-analysis.jade
+++ b/Code/src/web/views/data-analysis.jade
@@ -21,9 +21,10 @@ block admin-content
             });
         .col-xl-offset-2.col-xl-6.col-lg-offset-2.col-lg-6.hidden-md.hidden-sm.hidden-xs
             p.lead Retrieve data for analysis
-            select.selectpicker(id="parent-menu" title="Select an Agency" mobile = "true" onchange="location = this.value" data-width="fit")
-                  option(value="/admin/dataAnalysis/bolotocsv" ) Pincrest
-                  option(value="/bolo/mybolos" ) FIU
+            select.selectpicker(data-actions-box="true" id="agency-select" title="Select an Agency" mobile = "true" data-width="200px" multiple data-selected-text-format="count>1")
+                  for agency in agencies
+                      option(value=agency.name ) #{agency.name}
+                      
             br
             br
             h4 Start Date:
@@ -37,7 +38,7 @@ block admin-content
             <br>
             +check_box("matchFields","All Data",true)
             .form-group
-                a.btn.btn-default.pull-left( href="/admin/dataAnalysis/bolotocsv" type = "submit" value = "submit") Down load
+                a.btn.btn-default.pull-left( id="download-button" type = "submit" value = "submit") Download
                 a.btn.btn-default.pull-right( href="/admin/dataAnalysis/bolotocsv", target="_blank") All Data
         .hidden-lg.hidden-xl
             br
@@ -45,3 +46,25 @@ block admin-content
                 | from this action because you might be on a mobile device
     else
         h1.strong(style='color:red;') Well this is embarrassing! Who are you?
+
+    script.
+        $('#download-button').click(function(e){
+          var agencies = [];
+          agencies = $('#agency-select').val();
+        
+          
+          if(agencies.length > 0){
+               console.log("TRUE")
+               var $this = $(this);
+              $.ajax({
+                url: '/admin/dataAnalysis/bolotoCsv',
+                type: 'GET',
+                data: {agencies},
+                success: function(pathToFile){
+                  window.location = pathToFile;
+              
+                }
+              })
+            }
+      
+          });
