added back buttom on additional images page for bolos

--- a/Code/src/web/views/bolo-additional-pics.jade
+++ b/Code/src/web/views/bolo-additional-pics.jade
@@ -5,9 +5,9 @@ block jumbo
 	.jumbotron
 		.container
 			p Additional Images
+			button.btn.btn-primary(onclick='history.go(-1);') Go Back
 
 
 block content
 	each name, uuid in bolo.images
 		img( src="/bolo/asset/" + bolo.id + "/" + uuid )
-					
